# budget-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  server.py
src/: __init__.py  server.py  utils.py
src/db/: __init__.py  categories.py  connection.py  models.py  transactions.py
src/tools/: __init__.py  app.py  categories.py  summary.py  transactions.py
tests/: __init__.py  conftest.py  test_app.py  test_categories.py  test_db.py  test_tools.py  test_utils.py
