[project]
name = "budget-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp[apps]>=3.4.4",
    "mcp>=1.28.1",
    "sqlalchemy>=2.0.51",
    "psycopg2-binary>=2.9.9",
]


[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
